[gd_scene load_steps=13 format=3 uid="uid://cobhinc6pra1v"]

[ext_resource type="Script" path="res://entity/bosses/boss.gd" id="1_6tvua"]
[ext_resource type="Script" path="res://entity/entity_stats.gd" id="2_7uy41"]
[ext_resource type="PackedScene" uid="uid://xqbx4dgecmyu" path="res://entity/enemy/enemy_base.tscn" id="3_yjw7m"]
[ext_resource type="Texture2D" uid="uid://2jceb3mphfhn" path="res://entity/bosses/unspeakable/unspeakable.png" id="4_uh2np"]
[ext_resource type="Script" path="res://entity/enemy/enemy_actions/logic_tree.gd" id="6_lcdi2"]
[ext_resource type="Script" path="res://entity/bosses/attacks/bullet_spray/projectile_spray_logic.gd" id="7_ojx6x"]
[ext_resource type="Script" path="res://entity/enemy/enemy_actions/chase.gd" id="7_yd2k6"]
[ext_resource type="AudioStream" uid="uid://ddt2s6nbke7wo" path="res://entity/bosses/attacks/projectile/cthulhu_shoot.wav" id="8_6jh8j"]
[ext_resource type="PackedScene" uid="uid://de4x0uj6k2go8" path="res://entity/bosses/attacks/bullet_spray/unspeakable_bullet.tscn" id="8_l6d8g"]

[sub_resource type="Gradient" id="Gradient_uyl6r"]
offsets = PackedFloat32Array(0.496333, 0.713936)
colors = PackedColorArray(0, 0, 0, 0.592157, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t8idm"]
gradient = SubResource("Gradient_uyl6r")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r3ddo"]
radius = 29.0
height = 64.0

[node name="Unspeakable" type="RigidBody2D"]
collision_layer = 3
collision_mask = 3
lock_rotation = true
freeze = true
freeze_mode = 1
script = ExtResource("1_6tvua")
spawn_offset = Vector2(0, -200)

[node name="EntityStats" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_7uy41")
armor = 2
max_health = 4000
health = 4000
movement_speed = 0.5
contact_damage = 10

[node name="InvincibilityTimer" type="Timer" parent="EntityStats"]
autostart = true

[node name="RegenTimer" type="Timer" parent="EntityStats"]

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, -9.53674e-07)
scale = Vector2(1.6875, 0.66764)
texture = SubResource("GradientTexture2D_t8idm")

[node name="EnemyBase" parent="." node_paths=PackedStringArray("entity_stats") instance=ExtResource("3_yjw7m")]
sprite = ExtResource("4_uh2np")
entity_stats = NodePath("../EntityStats")
sprite_scale = 3.0
sprite_offset = Vector2(-2.535, -78.98)
show_health_bar = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -21)
shape = SubResource("CapsuleShape2D_r3ddo")

[node name="LogicTree" type="Node" parent="."]
script = ExtResource("6_lcdi2")

[node name="ChaseLogic" type="Node" parent="LogicTree" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_yd2k6")
enemy = NodePath("../..")
always_chase = true

[node name="BulletSpray" type="Node" parent="LogicTree" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_ojx6x")
enemy = NodePath("../..")
projectile_scene = ExtResource("8_l6d8g")
projectile_lifetime = 5.0
projectile_initial_velocity = 300.0

[node name="CooldownTimer" type="Timer" parent="LogicTree/BulletSpray"]
process_mode = 1
wait_time = 5.0
one_shot = true

[node name="BurstLength" type="Timer" parent="LogicTree/BulletSpray"]
process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[node name="AttackTimer" type="Timer" parent="LogicTree/BulletSpray"]
process_mode = 1
wait_time = 0.05
one_shot = true
autostart = true

[node name="FireSound" type="AudioStreamPlayer2D" parent="LogicTree/BulletSpray"]
stream = ExtResource("8_6jh8j")

[connection signal="timeout" from="LogicTree/BulletSpray/CooldownTimer" to="LogicTree/BulletSpray" method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="LogicTree/BulletSpray/BurstLength" to="LogicTree/BulletSpray" method="_on_burst_length_timeout"]
[connection signal="timeout" from="LogicTree/BulletSpray/AttackTimer" to="LogicTree/BulletSpray" method="_on_attack_timer_timeout"]
